integration_tests/codegen_fail/fail/object/impl_no_fields.rs
struct Object {}

#[juniper::graphql_object]
impl Object {}

fn main() {}
